# fuse-monitor

./: Cargo.toml
crates/api/: Cargo.toml  main.rs
crates/api/src/: main.rs
crates/common/: Cargo.toml
crates/core/: Cargo.toml
crates/core/src/: lib.rs  main.rs  scanner.rs  watcher.rs
src/: App.vue  router.js
src/views/: Config.vue  Files.vue  Stats.vue
